--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "daisyui": "^2.33.0",
     "next": "12.3.1",
+    "next-pwa": "^5.6.0",
+    "pwa-asset-generator": "^6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
