--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-use": "^17.4.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.27.1",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
