--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^0.1.5",
     "daisyui": "^2.33.0",
     "next": "12.3.1",
     "next-pwa": "^5.6.0",
